<resources>
    <string name="app_name">Challenge Sports</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_video_message">What\'s in your mind</string>
    <string name="upload_video_message_2">Please choose\!</string>
    <string name="upload_video_message_3">Capture Video</string>
    <string name="upload_video_message_4">Choose from Gallery</string>
    <string name="upload_video_message_5">Please select a video</string>
    <string name="upload">Upload</string>
    <string name="upload_video_message_6">The video upload successfully</string>
    <string name="update_password">Update password</string>
    <string name="update_password_message_1">Set a password for your account </string>
    <string name="update_password_error_massage_2">Please fill current password </string>
    <string name="update_password_error_massage_3">Please fill a new password </string>
    <string name="update_password_error_massage_4">Please fill a confirm new password </string>
    <string name="update_password_message_2">Current password</string>
    <string name="update_password_message_3">New password</string>
    <string name="update_password_message_4">Confirm new password</string>
    <string name="update_password_message_5">New password not match</string>
    <string name="update_password_message_6">Password updated Successfully</string>
    <string name="birth_day">Birth day</string>
    <string name="birthday_massage1">Please set you\'r birthday</string>
    <string name="update">Update</string>
    <string name="update_profile_error_m">Please fill </string>
    <string name="update_successfully_message1">Update</string>
    <string name="update_successfully_message2">Successfully</string>
    <string name="gender_message">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="photo">Photo</string>
    <string name="language_message">Select Language</string>
    <string name="english_choose">English</string>
    <string name="chines_choose">中文</string>
    <string name="profile_header">Update Profile</string>
    <string name="bio">Bio</string>
    <string name="birthday">Birthday</string>
    <string name="re_password">Reset Password</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="english">English</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_activity_message">Not allowed to change email</string>
    <string name="profile_activity_message2">Your bio content is empty</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="news_details">News Details</string>
    <string name="last_info">Last Info</string>
    <string name="all_news">More Info</string>
    <string name="all_videos">More Videos</string>
    <string name="forgot_password_text_1">Please enter the registered email address and the reset password link will be sent</string>
    <string name="email_address">Email address</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_text_2">Please fill the email</string>
    <string name="forgot_password_text_3">Enter valid email please</string>
    <string name="forgot_password_text_4">Back to login</string>
    <string name="register">Register</string>
    <string name="massage_register_1">Welcome to Challenge Sports</string>
    <string name="massage_register_2">Please register with us with below details</string>
    <string name="full_name">Full Name</string>
    <string name="massage_register_3">Accept to the End User Licence Agreement</string>
    <string name="create_account">Create Account</string>
    <string name="massage_register_4">Already Have an Account\? Tap here to</string>
    <string name="sign_in">Sign In</string>
    <string name="register_error_massage_1">Please fill all requirements </string>
    <string name="register_error_massage_2">Please fill name </string>
    <string name="register_error_massage_3">Please Accept to the End User Licence Agreement </string>
    <string name="massage_login_1">Welcome Back</string>
    <string name="massage_login_2">Description about the app about 1\.5 to 2 lines nothing more than 2 lines</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="forgo_password">Forgo Password\?</string>
    <string name="login">Login</string>
    <string name="massage_login_3">You don\'t Have an Account\? Tap here to</string>
    <string name="sign_up">Sign Up</string>
    <string name="massage_login_4">something wrong</string>
    <string name="login_error_massage_1">Please fill email and password</string>
    <string name="login_error_massage_2">Please fill email</string>
    <string name="login_error_massage_3">Please fill password</string>
    <string name="login_error_massage_4">Password can\'t be less than 6 characters</string>
    <string name="weather_empty">Weather not available</string>
    <string name="match_details">Match Details</string>
    <string name="match_info">Match Info</string>
    <string name="odds">Odds</string>
    <string name="h2h">H2H</string>
    <string name="won">Won</string>
    <string name="lose">Lose</string>
    <string name="about">About the match</string>
    <string name="vs">VS</string>
    <string name="at">At</string>
    <string name="league_info">League info</string>
    <string name="league_name">League name</string>
    <string name="weather">Weather</string>
    <string name="to_win">To win</string>
    <string name="handicap">Handicap</string>
    <string name="goals">Goals</string>
    <string name="corners">Corners</string>
    <string name="home_team">Home</string>
    <string name="away">Away</string>
    <string name="x">X</string>
    <string name="goal">Goals</string>
    <string name="over">Over</string>
    <string name="under">Under</string>
    <string name="home">Home</string>
    <string name="matches">Matches</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="up_coming">Upcoming</string>
    <string name="live">Live</string>
    <string name="hot">Hot</string>
    <string name="finish">Finish</string>
    <string name="trending">Trending</string>
    <string name="latest_news">Latest News</string>
    <string name="news">News</string>
    <string name="highlights">Highlights</string>
    <string name="match_highlights">Match Highlights</string>
    <string name="see_all">See All</string>
    <string name="latest_videos">Latest Videos</string>
    <string name="auto_play">Auto Play</string>
    <string name="related_videos">Related videos</string>
    <string name="app_pref_name">sports_app</string>
    <string name="BET365">BET365</string>
    <string name="Crown">Crown</string>
    <string name="Bet10">Bet10</string>
    <string name="Ladbrokes">Ladbrokes</string>
    <string name="Mansion88">Mansion88</string>
    <string name="Macauslot">Macauslot</string>
    <string name="SNAI">SNAI</string>
    <string name="William">William</string>
    <string name="Easybets">Easybets</string>
    <string name="Vcbet">Vcbet</string>
    <string name="EuroBet">EuroBet</string>
    <string name="Interwetten">Interwetten</string>
    <string name="Bet12">Bet12</string>
    <string name="Sbobet">Sbobet</string>
    <string name="Wewbet">Wewbet</string>
    <string name="Bet18">Bet18</string>
    <string name="Fun88">Fun88</string>
    <string name="Bet188">Bet188</string>
    <string name="Pinnacle">Pinnacle</string>
    <string name="weather_case_0">Weather not available</string>
    <string name="weather_case_1">Partially Cloudy</string>
    <string name="weather_case_2">Partially Cloudy Or Rain</string>
    <string name="weather_case_3">Snow</string>
    <string name="weather_case_4">Sunny</string>
    <string name="weather_case_5">Overcast Rain</string>
    <string name="weather_case_6">overcast</string>
    <string name="weather_case_7">mist</string>
    <string name="weather_case_8">cloudy With Rain</string>
    <string name="weather_case_9">cloudy With Rain2</string>
    <string name="weather_case_10">cloudy With Rain Rartial Thunder storms</string>
    <string name="weather_case_11">Clouds Rains And Thunder storms Locally</string>
    <string name="weather_case_12">Fog</string>
    <string name="title_activity_match_details">MatchDetails</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search here...</string>
    <string name="country">Country</string>
    <string name="error_message_1">Please try again later</string>
</resources>