<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_highlights"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/see_all_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/see_all"
        android:visibility="gone"
        android:textColor="@color/grey_text"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/highlights_recycler_view"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_5sdp"
        app:layout_constraintHeight_percent="0.27"
        android:nestedScrollingEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_videos"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highlights_recycler_view" />

    <TextView
        android:id="@+id/see_all_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/see_all"
        android:textColor="@color/grey_text"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/more_vids_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/loading_more_bar"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="6dp" />

    <ProgressBar
        android:id="@+id/loading_more_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateTint="@color/brand_color"
        android:indeterminateTintMode="src_atop"
        />
</androidx.constraintlayout.widget.ConstraintLayout>