<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:id="@+id/header_rl"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_1"
            android:layout_marginHorizontal="@dimen/_100sdp"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@drawable/bg_7"
        android:layout_marginBottom="@dimen/_minus14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_rl">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/gender_message"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textStyle="bold"
                style="@style/CustomRadioButton"
                android:paddingStart="8dp"
                android:textSize="@dimen/_15sdp"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold"
                style="@style/CustomRadioButton"
                android:paddingStart="8dp"
                android:textSize="@dimen/_15sdp"
                />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            android:id="@+id/relativeLayout"
            android:alpha="0.5"
            />

        <ProgressBar
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:id="@+id/progressBar"
            android:theme="@style/progressBarBlue"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>