<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/teams_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginBottom="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40">

            <!--            android:layout_centerHorizontal="true"-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/odd_time_txt"
                    android:layout_centerHorizontal="true"
                    android:maxLines="2"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/home_team"
                    android:gravity="left"
                    android:textColor="@color/black" />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/home_txt"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/home_team"
                android:textColor="@color/green_text_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_2sdp"
                android:id="@+id/vs_x_txt"
                android:text="@string/x"
                android:textColor="@color/black"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/away_txt"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/away"
                android:textColor="@color/red_text_color" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_main_segment"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:id="@+id/sperator"
        app:layout_constraintTop_toBottomOf="@+id/teams_info_ll"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/sperator"/>


</androidx.constraintlayout.widget.ConstraintLayout>